# Move

./: .gitignore  README.md  plan.md
.github/workflows/: release.yml
netshare/: .gitignore  Cargo.toml
netshare/crates/localshare-client/: Cargo.toml
netshare/crates/localshare-client/src/: main.rs  network.rs
netshare/crates/localshare-client/src/audio/: virtual_mic.rs
netshare/crates/localshare-client/src/file/: clipboard.rs  mod.rs  receiver.rs  sender.rs
netshare/crates/localshare-client/src/input_inject/: linux.rs  mod.rs  windows.rs
netshare/crates/localshare-core/: Cargo.toml
netshare/crates/localshare-core/src/: audio.rs  file_transfer.rs  framing.rs  lib.rs  protocol.rs
netshare/crates/localshare-daemon/: Cargo.toml
netshare/crates/localshare-daemon/src/: autostart.rs  edge.rs  ipc.rs  main.rs
netshare/crates/localshare-discovery/: Cargo.toml
netshare/crates/localshare-discovery/src/: lib.rs
netshare/crates/localshare-gui/: Cargo.toml
netshare/crates/localshare-gui/src/: app.rs  bridge.rs  display.rs  edge.rs  main.rs  theme.rs  tray.rs
netshare/crates/localshare-gui/src/views/: mod.rs  monitor.rs  setting.rs
netshare/crates/localshare-server/: Cargo.toml
netshare/crates/localshare-server/src/: active_client.rs  lib.rs  main.rs  network.rs
netshare/crates/localshare-server/src/audio/: audio_sink.rs  mod.rs
netshare/crates/localshare-server/src/file/: clipboard.rs  mod.rs  receiver.rs  sender.rs
netshare/crates/localshare-server/src/input_capture/: linux.rs  mod.rs  windows.rs
netshare/crates/netshare-client/: Cargo.toml
netshare/crates/netshare-client/src/: lib.rs  main.rs  network.rs
netshare/crates/netshare-client/src/audio/: audio_capture.rs  mod.rs  virtual_mic.rs
netshare/crates/netshare-client/src/file/: clipboard.rs  mod.rs  receiver.rs  sender.rs
netshare/crates/netshare-client/src/input_inject/: linux.rs  mod.rs  windows.rs
netshare/crates/netshare-core/: Cargo.toml
netshare/crates/netshare-core/src/: framing.rs  input.rs  layout.rs  lib.rs  playout.rs  protocol.rs  tls.rs
netshare/crates/netshare-gui/: Cargo.toml  build.rs
netshare/crates/netshare-gui/src/: app.rs  discovery.rs  main.rs  tray.rs
netshare/crates/netshare-server/: Cargo.toml
netshare/crates/netshare-server/src/: active_client.rs  lib.rs  main.rs  network.rs  tls.rs
netshare/crates/netshare-server/src/audio/: audio_sink.rs  mic_capture.rs  mod.rs
netshare/crates/netshare-server/src/file/: clipboard.rs  mod.rs  receiver.rs  sender.rs
netshare/crates/netshare-server/src/input_capture/: linux.rs  mod.rs  windows.rs
netshare/scripts/: INTERNAL-CODE-SIGNING.md  build-and-stage-gui.ps1  create-internal-code-signing-cert.ps1  install-internal-code-signing-cert.ps1  run-netshare-gui-with-logging.ps1  sign-netshare-gui.ps1
packaging/: install-ubuntu.sh  make-appimage.sh  make-deb.sh
