[package]
name    = "localshare-client"
version = "0.1.0"
edition = "2021"

[dependencies]
localshare-core = { path = "../localshare-core" }
tokio         = { workspace = true }
serde         = { workspace = true }
bincode       = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
cpal       = "0.15"
opus       = "0.3"
sha2       = "0.10"
crc32fast  = "1.4"
arboard    = "3"
walkdir    = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",    # SendInput, INPUT, MOUSEINPUT, KEYBDINPUT
    "Win32_Foundation",                   # BOOL
] }
