[package]
name    = "localshare-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "localshare-daemon"
path = "src/main.rs"

[dependencies]
localshare-core      = { path = "../localshare-core" }
localshare-server    = { path = "../localshare-server" }
localshare-discovery = { path = "../localshare-discovery" }
tokio                = { workspace = true }
serde                = { workspace = true }
serde_json           = "1"
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
anyhow               = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
] }
