[package]
name    = "localshare-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
localshare-core      = { path = "../localshare-core" }
localshare-server    = { path = "../localshare-server" }
localshare-discovery = { path = "../localshare-discovery" }
tokio              = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
egui               = "0.28"
eframe             = { version = "0.28", features = ["persistence"] }
anyhow             = "1"
serde_json         = "1"
cpal               = "0.15"
tray-icon = ">=0.16,<0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
