[package]
name    = "netshare-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "netshare_client"
path = "src/lib.rs"

[[bin]]
name = "netshare-client"
path = "src/main.rs"

[dependencies]
netshare-core = { path = "../netshare-core" }
tokio         = { workspace = true }
serde         = { workspace = true }
bincode       = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = "1"
rustls       = { workspace = true }
tokio-rustls = { workspace = true }
cpal       = "0.15"
opus       = "0.3"
sha2       = "0.10"
crc32fast  = "1.4"
arboard    = "3"
walkdir    = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",    # SendInput, INPUT, MOUSEINPUT, KEYBDINPUT
    "Win32_UI_WindowsAndMessaging",       # SetCursorPos, GetSystemMetrics, GetCursorPos
    "Win32_Foundation",                   # BOOL, POINT
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev  = "0.12"
x11rb  = { version = "0.13", features = ["allow-unsafe-code"] }
