[package]
name    = "netshare-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
netshare-core      = { path = "../netshare-core" }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
egui               = "0.28"
eframe             = "0.28"
