[package]
name    = "netshare-gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netshare-gui"
path = "src/main.rs"

[dependencies]
netshare-core   = { path = "../netshare-core" }
netshare-server = { path = "../netshare-server" }
netshare-client = { path = "../netshare-client" }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow  = "1"
rustls  = { workspace = true }
egui    = "0.28"
eframe  = { version = "0.28", features = ["persistence"] }
tray-icon = "0.14"
mdns-sd   = "0.11"
rfd       = "0.15"
chrono    = "0.4"
lazy_static = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",           # ShellExecuteW (restart as admin button)
    "Win32_Security",           # GetTokenInformation, TOKEN_ELEVATION
    "Win32_System_Threading",   # GetCurrentProcess, OpenProcessToken
] }
