[package]
name    = "netshare-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "netshare_server"
path = "src/lib.rs"

[[bin]]
name = "netshare-server"
path = "src/main.rs"

[dependencies]
netshare-core = { path = "../netshare-core" }
tokio         = { workspace = true }
serde         = { workspace = true }
bincode       = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow       = "1"
rustls       = { workspace = true }
tokio-rustls = { workspace = true }
rcgen        = { workspace = true }
cpal       = "0.15"
opus       = "0.3"
sha2       = "0.10"
crc32fast  = "1.4"
arboard    = "3"
walkdir    = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",       # SetWindowsHookEx, WH_MOUSE_LL, WH_KEYBOARD_LL
    "Win32_UI_Input_KeyboardAndMouse",    # KBDLLHOOKSTRUCT, MSLLHOOKSTRUCT
    "Win32_Foundation",                   # WPARAM, LPARAM, LRESULT, HWND, BOOL
    "Win32_Graphics_Gdi",                 # EnumDisplayMonitors, GetMonitorInfo, MONITORINFOEXW
    "Win32_System_Threading",             # SetThreadPriority, SetPriorityClass
] }
